--- a/SaleHereAssignment/Scene/Achievement/AchievementCollectionViewCell.xib
+++ b/SaleHereAssignment/Scene/Achievement/AchievementCollectionViewCell.xib
@@ -1,10 +1,86 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AchievementCollectionViewCell" id="vD4-qv-KtX" customClass="AchievementCollectionViewCell" customModule="SaleHereAssignment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KfA-bC-3hZ">
+                <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gkT-rR-Jw4">
+                        <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EaD-Ui-s2R">
+                                <rect key="frame" x="37.5" y="36" width="118" height="121"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-medal" translatesAutoresizingMaskIntoConstraints="NO" id="vvP-g6-hyJ">
+                                        <rect key="frame" x="27" y="16" width="64" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" priority="750" constant="64" id="0ZI-lR-GLb"/>
+                                            <constraint firstAttribute="width" priority="750" constant="64" id="Eo8-S5-5Ez"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Achievement" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gr3-M2-ooU">
+                                        <rect key="frame" x="16" y="88" width="86" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Gr3-M2-ooU" firstAttribute="leading" secondItem="EaD-Ui-s2R" secondAttribute="leading" constant="16" id="0pr-y2-KP9"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vvP-g6-hyJ" secondAttribute="trailing" id="6cf-Hv-ANX"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gr3-M2-ooU" secondAttribute="trailing" constant="16" id="LAA-1U-2f1"/>
+                                    <constraint firstItem="vvP-g6-hyJ" firstAttribute="centerX" secondItem="EaD-Ui-s2R" secondAttribute="centerX" id="XAs-Fd-xcn"/>
+                                    <constraint firstItem="vvP-g6-hyJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="EaD-Ui-s2R" secondAttribute="leading" id="Zle-LM-GLw"/>
+                                    <constraint firstItem="vvP-g6-hyJ" firstAttribute="top" secondItem="EaD-Ui-s2R" secondAttribute="top" constant="16" id="bg7-YP-fdc"/>
+                                    <constraint firstItem="Gr3-M2-ooU" firstAttribute="top" secondItem="vvP-g6-hyJ" secondAttribute="bottom" constant="8" id="ufP-qf-9dn"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gr3-M2-ooU" secondAttribute="bottom" constant="16" id="yNn-7L-V7k"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="EaD-Ui-s2R" firstAttribute="centerX" secondItem="gkT-rR-Jw4" secondAttribute="centerX" id="3eP-ez-6wC"/>
+                            <constraint firstItem="EaD-Ui-s2R" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="gkT-rR-Jw4" secondAttribute="leading" id="Ku7-b9-zch"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EaD-Ui-s2R" secondAttribute="trailing" id="Nta-AC-Sys"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="EaD-Ui-s2R" secondAttribute="bottom" id="OEs-U0-hIg"/>
+                            <constraint firstItem="EaD-Ui-s2R" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gkT-rR-Jw4" secondAttribute="top" id="QJg-df-WTN"/>
+                            <constraint firstItem="EaD-Ui-s2R" firstAttribute="centerY" secondItem="gkT-rR-Jw4" secondAttribute="centerY" id="Zku-F1-PPy"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="gkT-rR-Jw4" firstAttribute="leading" secondItem="KfA-bC-3hZ" secondAttribute="leading" id="CCu-aw-iOI"/>
+                    <constraint firstAttribute="bottom" secondItem="gkT-rR-Jw4" secondAttribute="bottom" id="JUW-84-zkx"/>
+                    <constraint firstItem="gkT-rR-Jw4" firstAttribute="top" secondItem="KfA-bC-3hZ" secondAttribute="top" id="Yar-Q5-o9Z"/>
+                    <constraint firstAttribute="trailing" secondItem="gkT-rR-Jw4" secondAttribute="trailing" id="gaU-xG-MW8"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="290" height="176"/>
+            <connections>
+                <outlet property="achievementImageView" destination="vvP-g6-hyJ" id="eQx-RZ-Qgm"/>
+                <outlet property="achievementTitleLabel" destination="Gr3-M2-ooU" id="Neh-Kg-QX1"/>
+            </connections>
+            <point key="canvasLocation" x="-161.59420289855075" y="-110.82589285714285"/>
+        </collectionViewCell>
     </objects>
+    <resources>
+        <image name="ic-medal" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
