--- a/SaleHereAssignment/Scene/Achievement/AchievementStoryboard.storyboard
+++ b/SaleHereAssignment/Scene/Achievement/AchievementStoryboard.storyboard
@@ -1,26 +1,135 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Achievement View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AchievementViewController" customModuleProvider="___VARIABLE_ibCustomModuleProvider___" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
+                <viewController id="BYZ-38-t0r" customClass="AchievementViewController" customModule="SaleHereAssignment" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7SV-Pb-f79">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPw-bz-Ti5">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="128"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="gnh-2C-g03">
+                                                <rect key="frame" x="101.5" y="28" width="211.5" height="72"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-big-star" translatesAutoresizingMaskIntoConstraints="NO" id="dNX-iw-3b4">
+                                                        <rect key="frame" x="0.0" y="0.0" width="72" height="72"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="72" id="4pE-KZ-Fc6"/>
+                                                            <constraint firstAttribute="height" constant="72" id="NGi-RJ-vdX"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="wom-7S-xWh">
+                                                        <rect key="frame" x="72" y="0.0" width="139.5" height="72"/>
+                                                        <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y6K-OY-npl">
+                                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="72"/>
+                                                                <subviews>
+                                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="HpR-fP-bEV">
+                                                                        <rect key="frame" x="0.0" y="2.5" width="139.5" height="67.5"/>
+                                                                        <subviews>
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Achievement" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCl-Z5-efx">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="139.5" height="29"/>
+                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
+                                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                <nil key="highlightedColor"/>
+                                                                            </label>
+                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LWx-lu-kbS">
+                                                                                <rect key="frame" x="0.0" y="29" width="139.5" height="38.5"/>
+                                                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="32"/>
+                                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                                <nil key="highlightedColor"/>
+                                                                            </label>
+                                                                        </subviews>
+                                                                    </stackView>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="trailing" secondItem="HpR-fP-bEV" secondAttribute="trailing" id="Ryw-ym-dT7"/>
+                                                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="HpR-fP-bEV" secondAttribute="bottom" id="Ta9-n0-OSA"/>
+                                                                    <constraint firstItem="HpR-fP-bEV" firstAttribute="leading" secondItem="y6K-OY-npl" secondAttribute="leading" id="gxI-O8-mbi"/>
+                                                                    <constraint firstItem="HpR-fP-bEV" firstAttribute="centerY" secondItem="y6K-OY-npl" secondAttribute="centerY" id="hMQ-UQ-94G"/>
+                                                                    <constraint firstItem="HpR-fP-bEV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="y6K-OY-npl" secondAttribute="top" id="msf-7R-ACG"/>
+                                                                </constraints>
+                                                            </view>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.90656501050000005" green="0.64662331340000001" blue="0.13627758619999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="GAg-x9-qIV"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gnh-2C-g03" secondAttribute="trailing" id="Geu-3Y-mKq"/>
+                                            <constraint firstItem="gnh-2C-g03" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="BPw-bz-Ti5" secondAttribute="leading" id="NQH-0X-6jd"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gnh-2C-g03" secondAttribute="bottom" id="Rig-v8-4Nm"/>
+                                            <constraint firstItem="gnh-2C-g03" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BPw-bz-Ti5" secondAttribute="top" id="Vuv-mo-cTp"/>
+                                            <constraint firstItem="gnh-2C-g03" firstAttribute="centerX" secondItem="BPw-bz-Ti5" secondAttribute="centerX" id="c3E-6H-HeI"/>
+                                            <constraint firstItem="gnh-2C-g03" firstAttribute="centerY" secondItem="BPw-bz-Ti5" secondAttribute="centerY" id="g0U-8R-7di"/>
+                                        </constraints>
+                                    </view>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0P9-sb-ZQh">
+                                        <rect key="frame" x="0.0" y="128" width="414" height="690"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="osu-ID-oEK">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                    </collectionView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="0P9-sb-ZQh" firstAttribute="top" secondItem="BPw-bz-Ti5" secondAttribute="bottom" id="KZF-mb-e7b"/>
+                                    <constraint firstItem="0P9-sb-ZQh" firstAttribute="leading" secondItem="7SV-Pb-f79" secondAttribute="leading" id="PrR-Qw-T8x"/>
+                                    <constraint firstItem="BPw-bz-Ti5" firstAttribute="leading" secondItem="7SV-Pb-f79" secondAttribute="leading" id="Xh2-j9-yDS"/>
+                                    <constraint firstAttribute="trailing" secondItem="BPw-bz-Ti5" secondAttribute="trailing" id="hR1-i2-vIT"/>
+                                    <constraint firstAttribute="trailing" secondItem="0P9-sb-ZQh" secondAttribute="trailing" id="hgF-cS-hrs"/>
+                                    <constraint firstAttribute="bottom" secondItem="0P9-sb-ZQh" secondAttribute="bottom" id="kmx-7B-csB"/>
+                                    <constraint firstItem="BPw-bz-Ti5" firstAttribute="top" secondItem="7SV-Pb-f79" secondAttribute="top" id="qRD-ax-D1n"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ewb-cf-ufU"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7SV-Pb-f79" firstAttribute="top" secondItem="ewb-cf-ufU" secondAttribute="top" id="YXv-el-fhK"/>
+                            <constraint firstItem="ewb-cf-ufU" firstAttribute="bottom" secondItem="7SV-Pb-f79" secondAttribute="bottom" id="r0D-0q-GtT"/>
+                            <constraint firstItem="ewb-cf-ufU" firstAttribute="trailing" secondItem="7SV-Pb-f79" secondAttribute="trailing" id="sHX-L6-ChN"/>
+                            <constraint firstItem="7SV-Pb-f79" firstAttribute="leading" secondItem="ewb-cf-ufU" secondAttribute="leading" id="v3P-RO-tgr"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="achievementCollectionView" destination="0P9-sb-ZQh" id="Pi6-Kn-jdp"/>
+                        <outlet property="achievementImageView" destination="dNX-iw-3b4" id="Ja9-Cn-QpF"/>
+                        <outlet property="achievementLevelLabel" destination="LWx-lu-kbS" id="bqy-Bw-DmR"/>
+                        <outlet property="achievementTitleLabel" destination="KCl-Z5-efx" id="paX-9d-Gmp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic-big-star" width="128" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
