--- a/SaleHereAssignment/Scene/Home/Goals/GoalsCollectionView.xib
+++ b/SaleHereAssignment/Scene/Home/Goals/GoalsCollectionView.xib
@@ -1,32 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GoalsCollectionView" customModule="SaleHereAssignment" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="Thp-1O-tcA" id="hhU-u3-SMW"/>
+                <outlet property="goalsCollectionView" destination="YeN-uA-baz" id="TzY-6s-rhQ"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" id="olW-Fd-j9U">
-            <rect key="frame" x="0.0" y="0.0" width="419" height="216"/>
+        <view contentMode="scaleToFill" id="Thp-1O-tcA">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="188"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <subviews>
+                <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="YeN-uA-baz">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="188"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="55P-gZ-uIg">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="YeN-uA-baz" secondAttribute="trailing" id="1jY-5P-IAA"/>
+                <constraint firstItem="YeN-uA-baz" firstAttribute="top" secondItem="Thp-1O-tcA" secondAttribute="top" id="9a1-mx-XU8"/>
+                <constraint firstItem="YeN-uA-baz" firstAttribute="leading" secondItem="Thp-1O-tcA" secondAttribute="leading" id="aNd-8F-Axo"/>
+                <constraint firstAttribute="bottom" secondItem="YeN-uA-baz" secondAttribute="bottom" id="eI0-mG-X5y"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ehe-UX-NbH">
-                <size key="itemSize" width="128" height="128"/>
-                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-            </collectionViewFlowLayout>
-            <point key="canvasLocation" x="-132.60869565217394" y="-172.09821428571428"/>
-        </collectionView>
+            <point key="canvasLocation" x="-408.69565217391306" y="-322.09821428571428"/>
+        </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
