--- a/SaleHereAssignment/Scene/Home/Goals/GoalsCollectionViewCell.xib
+++ b/SaleHereAssignment/Scene/Home/Goals/GoalsCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,14 +12,109 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GoalsCollectionViewCell" id="Z4n-7Q-4VY" customClass="GoalsCollectionViewCell" customModule="SaleHereAssignment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8oH-gZ-MAc">
-                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t7M-B9-AOB">
+                        <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-money-bag" translatesAutoresizingMaskIntoConstraints="NO" id="vMH-tY-SoL">
+                                <rect key="frame" x="16" y="24" width="38" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="nQ7-9a-0Xh"/>
+                                    <constraint firstAttribute="width" constant="38" id="ojf-rS-Shh"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16,500 THB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mc-J1-2bY">
+                                <rect key="frame" x="78" y="29.5" width="81" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20,000 THB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xbI-gK-h9Q">
+                                <rect key="frame" x="91" y="47.5" width="68" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unhappy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Uu-a4-BD4">
+                                <rect key="frame" x="16" y="139" width="46" height="12"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="150 days left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCr-Ei-MwW">
+                                <rect key="frame" x="97" y="139" width="62" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AhY-g5-Z7B" customClass="BaseProgress" customModule="SaleHereAssignment" customModuleProvider="target">
+                                <rect key="frame" x="16" y="78" width="143" height="14"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="14" id="wsc-rK-XgE"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ไปเที่ยวญีปุ่น" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AGB-wM-ddc">
+                                <rect key="frame" x="16" y="108" width="143" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AhY-g5-Z7B" firstAttribute="top" secondItem="vMH-tY-SoL" secondAttribute="bottom" constant="16" id="2OH-QY-xXX"/>
+                            <constraint firstAttribute="trailing" secondItem="AGB-wM-ddc" secondAttribute="trailing" constant="16" id="3of-Mr-Ebe"/>
+                            <constraint firstItem="AGB-wM-ddc" firstAttribute="top" secondItem="AhY-g5-Z7B" secondAttribute="bottom" constant="16" id="9lr-wY-NHk"/>
+                            <constraint firstItem="7mc-J1-2bY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vMH-tY-SoL" secondAttribute="trailing" constant="8" id="Av4-If-QtI"/>
+                            <constraint firstItem="0Uu-a4-BD4" firstAttribute="leading" secondItem="t7M-B9-AOB" secondAttribute="leading" constant="16" id="BTP-re-hyA"/>
+                            <constraint firstAttribute="trailing" secondItem="7mc-J1-2bY" secondAttribute="trailing" constant="16" id="D0b-HO-Q1S"/>
+                            <constraint firstAttribute="bottom" secondItem="0Uu-a4-BD4" secondAttribute="bottom" constant="24" id="GWj-K8-a50"/>
+                            <constraint firstItem="AhY-g5-Z7B" firstAttribute="leading" secondItem="t7M-B9-AOB" secondAttribute="leading" constant="16" id="HQM-M0-BVk"/>
+                            <constraint firstItem="vMH-tY-SoL" firstAttribute="top" secondItem="t7M-B9-AOB" secondAttribute="top" constant="24" id="I9u-6y-t2l"/>
+                            <constraint firstItem="xbI-gK-h9Q" firstAttribute="bottom" secondItem="vMH-tY-SoL" secondAttribute="bottom" id="Ius-7f-ZEt"/>
+                            <constraint firstAttribute="trailing" secondItem="AhY-g5-Z7B" secondAttribute="trailing" constant="16" id="Ix2-V4-LHU"/>
+                            <constraint firstItem="0Uu-a4-BD4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AGB-wM-ddc" secondAttribute="bottom" constant="8" id="QXX-gM-hCj"/>
+                            <constraint firstItem="AGB-wM-ddc" firstAttribute="leading" secondItem="t7M-B9-AOB" secondAttribute="leading" constant="16" id="VrD-gm-KUd"/>
+                            <constraint firstItem="xbI-gK-h9Q" firstAttribute="top" secondItem="7mc-J1-2bY" secondAttribute="bottom" id="Wfz-W6-cjw"/>
+                            <constraint firstAttribute="bottom" secondItem="WCr-Ei-MwW" secondAttribute="bottom" constant="24" id="ZB1-bJ-dT7"/>
+                            <constraint firstItem="vMH-tY-SoL" firstAttribute="leading" secondItem="t7M-B9-AOB" secondAttribute="leading" constant="16" id="ajH-ZN-K0G"/>
+                            <constraint firstAttribute="trailing" secondItem="xbI-gK-h9Q" secondAttribute="trailing" constant="16" id="cEp-Kv-VUr"/>
+                            <constraint firstItem="WCr-Ei-MwW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="0Uu-a4-BD4" secondAttribute="trailing" constant="8" id="icI-10-WBK"/>
+                            <constraint firstItem="xbI-gK-h9Q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vMH-tY-SoL" secondAttribute="trailing" constant="8" id="lHg-LK-18d"/>
+                            <constraint firstAttribute="trailing" secondItem="WCr-Ei-MwW" secondAttribute="trailing" constant="16" id="sam-xz-Wds"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="t7M-B9-AOB" firstAttribute="top" secondItem="8oH-gZ-MAc" secondAttribute="top" id="JWN-8V-p9N"/>
+                    <constraint firstAttribute="bottom" secondItem="t7M-B9-AOB" secondAttribute="bottom" id="YhD-NT-OKf"/>
+                    <constraint firstItem="t7M-B9-AOB" firstAttribute="leading" secondItem="8oH-gZ-MAc" secondAttribute="leading" id="d79-02-fQ4"/>
+                    <constraint firstAttribute="trailing" secondItem="t7M-B9-AOB" secondAttribute="trailing" id="pJl-zM-jYR"/>
+                </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="200" height="188"/>
-            <point key="canvasLocation" x="-343" y="-140"/>
+            <connections>
+                <outlet property="discountPriceLabel" destination="7mc-J1-2bY" id="uhd-zv-nzK"/>
+                <outlet property="expiredDateLabel" destination="WCr-Ei-MwW" id="Knk-ki-tL8"/>
+                <outlet property="iconImageView" destination="vMH-tY-SoL" id="cFI-ra-abb"/>
+                <outlet property="priceLabel" destination="xbI-gK-h9Q" id="7bz-Iu-PE4"/>
+                <outlet property="progressBar" destination="AhY-g5-Z7B" id="4Lw-vv-2EM"/>
+                <outlet property="statusLabel" destination="0Uu-a4-BD4" id="982-td-Lys"/>
+                <outlet property="titleLabel" destination="AGB-wM-ddc" id="MAA-6S-GE6"/>
+            </connections>
+            <point key="canvasLocation" x="-343.47826086956525" y="-140.625"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="ic-money-bag" width="512" height="512"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
