--- a/SaleHereAssignment/Scene/NewGoal/NewGoalCollectionViewCell.xib
+++ b/SaleHereAssignment/Scene/NewGoal/NewGoalCollectionViewCell.xib
@@ -1,10 +1,87 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="NewGoalCollectionViewCell" id="wHV-Eh-SPD" customClass="NewGoalCollectionViewCell" customModule="SaleHereAssignment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="C4b-Xa-QHI">
+                <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D3w-5e-lCt">
+                        <rect key="frame" x="0.0" y="0.0" width="193" height="193"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DZs-Hs-Qvb">
+                                <rect key="frame" x="48.5" y="36" width="96" height="121"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-medal" translatesAutoresizingMaskIntoConstraints="NO" id="M63-Lb-9uo">
+                                        <rect key="frame" x="16" y="16" width="64" height="64"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" priority="750" constant="64" id="hDP-c6-IKO"/>
+                                            <constraint firstAttribute="width" priority="750" constant="64" id="tJT-ow-6kX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Travel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2F-c2-g9b">
+                                        <rect key="frame" x="16" y="88" width="64" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="E2F-c2-g9b" firstAttribute="top" secondItem="M63-Lb-9uo" secondAttribute="bottom" constant="8" id="3pl-IB-kv5"/>
+                                    <constraint firstItem="M63-Lb-9uo" firstAttribute="top" secondItem="DZs-Hs-Qvb" secondAttribute="top" constant="16" id="Bpc-7i-Xju"/>
+                                    <constraint firstAttribute="bottom" secondItem="E2F-c2-g9b" secondAttribute="bottom" constant="16" id="IJG-c0-xkv"/>
+                                    <constraint firstItem="M63-Lb-9uo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DZs-Hs-Qvb" secondAttribute="leading" constant="16" id="N6x-m8-qbj"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="M63-Lb-9uo" secondAttribute="trailing" constant="16" id="VTX-pQ-zYF"/>
+                                    <constraint firstItem="E2F-c2-g9b" firstAttribute="leading" secondItem="DZs-Hs-Qvb" secondAttribute="leading" constant="16" id="hsz-2B-bam"/>
+                                    <constraint firstItem="M63-Lb-9uo" firstAttribute="centerX" secondItem="DZs-Hs-Qvb" secondAttribute="centerX" id="nfl-ZA-lbF"/>
+                                    <constraint firstAttribute="trailing" secondItem="E2F-c2-g9b" secondAttribute="trailing" constant="16" id="olP-oT-pCS"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="DZs-Hs-Qvb" firstAttribute="top" relation="greaterThanOrEqual" secondItem="D3w-5e-lCt" secondAttribute="top" id="32n-77-HNP"/>
+                            <constraint firstItem="DZs-Hs-Qvb" firstAttribute="centerY" secondItem="D3w-5e-lCt" secondAttribute="centerY" id="A1g-FW-Kfa"/>
+                            <constraint firstItem="DZs-Hs-Qvb" firstAttribute="centerX" secondItem="D3w-5e-lCt" secondAttribute="centerX" id="YhV-Oa-rIj"/>
+                            <constraint firstItem="DZs-Hs-Qvb" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="D3w-5e-lCt" secondAttribute="leading" id="cof-al-8Ei"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="DZs-Hs-Qvb" secondAttribute="trailing" id="knk-o1-gLr"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="DZs-Hs-Qvb" secondAttribute="bottom" id="zbb-mz-QXH"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="D3w-5e-lCt" secondAttribute="bottom" id="Mh7-Bg-6kI"/>
+                    <constraint firstItem="D3w-5e-lCt" firstAttribute="leading" secondItem="C4b-Xa-QHI" secondAttribute="leading" id="RSg-wk-QVN"/>
+                    <constraint firstAttribute="trailing" secondItem="D3w-5e-lCt" secondAttribute="trailing" id="owD-Bx-Paz"/>
+                    <constraint firstItem="D3w-5e-lCt" firstAttribute="top" secondItem="C4b-Xa-QHI" secondAttribute="top" id="tvo-kS-RVx"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="290" height="176"/>
+            <connections>
+                <outlet property="bgView" destination="D3w-5e-lCt" id="ibR-JE-57I"/>
+                <outlet property="newGoalImageView" destination="M63-Lb-9uo" id="FbD-hv-fwD"/>
+                <outlet property="newGoalTitleLabel" destination="E2F-c2-g9b" id="EL1-qI-1Sk"/>
+            </connections>
+            <point key="canvasLocation" x="-369" y="-202"/>
+        </collectionViewCell>
     </objects>
+    <resources>
+        <image name="ic-medal" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
