--- a/SaleHereAssignment/Views/BaseHorizontalCollectionView/BaseHorizontalCollectionView.xib
+++ b/SaleHereAssignment/Views/BaseHorizontalCollectionView/BaseHorizontalCollectionView.xib
@@ -1,10 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseHorizontalCollectionView" customModule="SaleHereAssignment" customModuleProvider="target">
+            <connections>
+                <outlet property="baseHorizontalCollectionView" destination="jFm-dK-VVs" id="3QK-Ma-irC"/>
+                <outlet property="contentView" destination="0p1-aq-70E" id="Psg-bk-i5W"/>
+                <outlet property="titleLabel" destination="IyR-mp-2hw" id="IsQ-Dp-99f"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="0p1-aq-70E">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="198"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Best Offer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IyR-mp-2hw">
+                    <rect key="frame" x="24" y="0.0" width="374" height="48"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="48" id="8k9-Yj-oNo"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="jFm-dK-VVs">
+                    <rect key="frame" x="0.0" y="48" width="414" height="150"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="150" id="zIk-HJ-vRf"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kAz-yn-BgM">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="IyR-mp-2hw" secondAttribute="trailing" constant="16" id="5Kw-tM-rKD"/>
+                <constraint firstAttribute="trailing" secondItem="jFm-dK-VVs" secondAttribute="trailing" id="9V1-AS-ZXh"/>
+                <constraint firstAttribute="bottom" secondItem="jFm-dK-VVs" secondAttribute="bottom" id="AcU-cb-QKG"/>
+                <constraint firstItem="IyR-mp-2hw" firstAttribute="top" secondItem="0p1-aq-70E" secondAttribute="top" id="BtY-Yn-uTh"/>
+                <constraint firstItem="IyR-mp-2hw" firstAttribute="leading" secondItem="0p1-aq-70E" secondAttribute="leading" constant="24" id="DAp-is-gGB"/>
+                <constraint firstItem="jFm-dK-VVs" firstAttribute="top" secondItem="IyR-mp-2hw" secondAttribute="bottom" id="YtF-9X-7AU"/>
+                <constraint firstItem="jFm-dK-VVs" firstAttribute="leading" secondItem="0p1-aq-70E" secondAttribute="leading" id="i0E-dH-s6l"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-255.07246376811597" y="-556.13839285714278"/>
+        </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
