--- a/SaleHereAssignment/Views/BaseHorizontalCollectionView/BaseHorizontalCollectionViewCell.xib
+++ b/SaleHereAssignment/Views/BaseHorizontalCollectionView/BaseHorizontalCollectionViewCell.xib
@@ -1,10 +1,50 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BaseHorizontalCollectionViewCell" id="kNj-gO-8eJ" customClass="BaseHorizontalCollectionViewCell" customModule="SaleHereAssignment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="367" height="150"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nod-WI-Xmm">
+                <rect key="frame" x="0.0" y="0.0" width="367" height="150"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jYK-Ki-zBh">
+                        <rect key="frame" x="0.0" y="0.0" width="367" height="150"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="89S-jU-0xT">
+                                <rect key="frame" x="0.0" y="0.0" width="367" height="150"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="89S-jU-0xT" secondAttribute="trailing" id="2Po-TC-5zz"/>
+                            <constraint firstItem="89S-jU-0xT" firstAttribute="leading" secondItem="jYK-Ki-zBh" secondAttribute="leading" id="3m5-gC-19o"/>
+                            <constraint firstItem="89S-jU-0xT" firstAttribute="top" secondItem="jYK-Ki-zBh" secondAttribute="top" id="Ceq-q5-nX2"/>
+                            <constraint firstAttribute="bottom" secondItem="89S-jU-0xT" secondAttribute="bottom" id="T6t-yT-GTT"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="jYK-Ki-zBh" secondAttribute="bottom" id="5ip-uS-0mW"/>
+                    <constraint firstItem="jYK-Ki-zBh" firstAttribute="leading" secondItem="nod-WI-Xmm" secondAttribute="leading" id="qFs-P4-705"/>
+                    <constraint firstAttribute="trailing" secondItem="jYK-Ki-zBh" secondAttribute="trailing" id="qH8-Zb-LzA"/>
+                    <constraint firstItem="jYK-Ki-zBh" firstAttribute="top" secondItem="nod-WI-Xmm" secondAttribute="top" id="sEK-Zm-wP1"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <size key="customSize" width="367" height="150"/>
+            <connections>
+                <outlet property="coverImage" destination="89S-jU-0xT" id="Edn-5b-f6c"/>
+            </connections>
+            <point key="canvasLocation" x="169" y="-506"/>
+        </collectionViewCell>
     </objects>
 </document>
