--- a/SaleHereAssignment/Views/BaseSelectTextField/BaseSelectTextField.xib
+++ b/SaleHereAssignment/Views/BaseSelectTextField/BaseSelectTextField.xib
@@ -1,10 +1,70 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseSelectTextField" customModule="SaleHereAssignment" customModuleProvider="target">
+            <connections>
+                <outlet property="bgView" destination="d67-Rg-tDx" id="OJM-0K-kEp"/>
+                <outlet property="contentView" destination="QP1-cF-fZA" id="SCb-2C-mNN"/>
+                <outlet property="iconImageView" destination="aUo-AQ-u2z" id="d8R-Og-EIh"/>
+                <outlet property="inputField" destination="NxU-jD-8Th" id="dSN-FT-mSU"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="QP1-cF-fZA">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d67-Rg-tDx">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NxU-jD-8Th" customClass="BasePaddingTextField" customModule="SaleHereAssignment" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic-select" translatesAutoresizingMaskIntoConstraints="NO" id="aUo-AQ-u2z">
+                            <rect key="frame" x="374" y="10" width="24" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="24" id="Xr4-n7-O7F"/>
+                                <constraint firstAttribute="height" constant="24" id="uRk-Dy-ALG"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="aUo-AQ-u2z" secondAttribute="bottom" constant="10" id="DXn-lV-ZQj"/>
+                        <constraint firstItem="NxU-jD-8Th" firstAttribute="top" secondItem="d67-Rg-tDx" secondAttribute="top" id="Hxx-Uz-rZN"/>
+                        <constraint firstAttribute="bottom" secondItem="NxU-jD-8Th" secondAttribute="bottom" id="TAq-bY-1Xx"/>
+                        <constraint firstItem="aUo-AQ-u2z" firstAttribute="leading" secondItem="NxU-jD-8Th" secondAttribute="trailing" id="fs0-FR-CgR"/>
+                        <constraint firstItem="aUo-AQ-u2z" firstAttribute="top" secondItem="d67-Rg-tDx" secondAttribute="top" constant="10" id="ocv-31-D5F"/>
+                        <constraint firstAttribute="trailing" secondItem="aUo-AQ-u2z" secondAttribute="trailing" constant="16" id="quo-hC-PAd"/>
+                        <constraint firstItem="NxU-jD-8Th" firstAttribute="leading" secondItem="d67-Rg-tDx" secondAttribute="leading" id="rvx-Dg-6ve"/>
+                        <constraint firstItem="aUo-AQ-u2z" firstAttribute="centerY" secondItem="d67-Rg-tDx" secondAttribute="centerY" id="uwv-gf-mQ9"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="d67-Rg-tDx" secondAttribute="bottom" id="AxB-bn-SeE"/>
+                <constraint firstAttribute="trailing" secondItem="d67-Rg-tDx" secondAttribute="trailing" id="XWw-Ph-Cgs"/>
+                <constraint firstItem="d67-Rg-tDx" firstAttribute="top" secondItem="QP1-cF-fZA" secondAttribute="top" id="xLF-EB-gYs"/>
+                <constraint firstItem="d67-Rg-tDx" firstAttribute="leading" secondItem="QP1-cF-fZA" secondAttribute="leading" id="yX6-D3-dSM"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-268.1159420289855" y="-188.83928571428569"/>
+        </view>
     </objects>
+    <resources>
+        <image name="ic-select" width="128" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
