--- a/SaleHereAssignment/Views/BaseTextField/BaseTextField.xib
+++ b/SaleHereAssignment/Views/BaseTextField/BaseTextField.xib
@@ -1,10 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseTextField" customModule="SaleHereAssignment" customModuleProvider="target">
+            <connections>
+                <outlet property="bgView" destination="vsU-xK-7V5" id="zON-OD-2tC"/>
+                <outlet property="contentView" destination="3hD-Fy-tZm" id="aSN-JK-Bgf"/>
+                <outlet property="inputField" destination="njv-P9-qK4" id="aRq-OV-H72"/>
+                <outlet property="unitTitleLabel" destination="aL8-R4-t0I" id="9Ei-Jl-rL4"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="3hD-Fy-tZm">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vsU-xK-7V5">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="njv-P9-qK4" customClass="BasePaddingTextField" customModule="SaleHereAssignment" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="364.5" height="44"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aL8-R4-t0I">
+                            <rect key="frame" x="364.5" y="0.0" width="33.5" height="44"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="aL8-R4-t0I" firstAttribute="leading" secondItem="njv-P9-qK4" secondAttribute="trailing" id="0Qk-JT-LnC"/>
+                        <constraint firstAttribute="bottom" secondItem="aL8-R4-t0I" secondAttribute="bottom" id="PfG-3I-zUP"/>
+                        <constraint firstItem="njv-P9-qK4" firstAttribute="top" secondItem="vsU-xK-7V5" secondAttribute="top" id="gth-bn-egq"/>
+                        <constraint firstItem="njv-P9-qK4" firstAttribute="leading" secondItem="vsU-xK-7V5" secondAttribute="leading" id="m0j-Oa-1fp"/>
+                        <constraint firstItem="aL8-R4-t0I" firstAttribute="top" secondItem="vsU-xK-7V5" secondAttribute="top" id="n5a-jF-YpE"/>
+                        <constraint firstAttribute="trailing" secondItem="aL8-R4-t0I" secondAttribute="trailing" constant="16" id="uZp-Yu-8Jm"/>
+                        <constraint firstAttribute="bottom" secondItem="njv-P9-qK4" secondAttribute="bottom" id="v7i-zj-dVx"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="vsU-xK-7V5" secondAttribute="trailing" id="1Lj-O4-XHM"/>
+                <constraint firstAttribute="bottom" secondItem="vsU-xK-7V5" secondAttribute="bottom" id="UVJ-cw-VzE"/>
+                <constraint firstItem="vsU-xK-7V5" firstAttribute="top" secondItem="3hD-Fy-tZm" secondAttribute="top" id="t98-8k-DoM"/>
+                <constraint firstItem="vsU-xK-7V5" firstAttribute="leading" secondItem="3hD-Fy-tZm" secondAttribute="leading" id="urB-5p-ddo"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-268.1159420289855" y="-188.83928571428569"/>
+        </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
